messaging_app/dbdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-db
spec:
  selector:
    matchLabels:
      app: messaging-app-db
  template:
    metadata:
      labels:
        app: messaging-app-db
    spec:
    # Set the volume for the containers
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc-claim
      containers:
      - name: messaging-app-db
        image: mysql:8.0
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "100m"
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: db-storage
            mountPath: /var/lib/mysql
