messaging_app/dbdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-db
spec:
  selector:
    matchLabels:
      app: messaging-app-db
  template:
    metadata:
      labels:
        app: messaging-app-db
    spec:
      containers:
      - name: messaging-app-db
        image: mysql
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 3306
