messaging_app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-db
spec:
  selector:
    app: messaging-app-db
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP 

---

apiVersion: v1
kind: Service
metadata:
  name: messaging-app
spec:
  selector:
    app: messaging-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
